--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_dark">#006400</color>
+    <color name="green_light">#008000</color>
+    <color name="red_dark">#8B0000</color>
 </resources>
